Fixed overflow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,7 +5,10 @@
 * {
     box-sizing: border-box;
 }
-
+html {
+    width: 100vw;
+    overflow-x: hidden;
+}
 body {
     color: $text-color;
     overflow-x: hidden;
